# voiceprint_cnn

./: .gitignore  README.md
c/: .gitignore  CMakeLists.txt
c/libs/: normalize_2d.c  trim_audio.h
c_code/: .gitignore  main.c
c_code/libs/: normalize_2d.c  normalize_2d.h  trim_audio.c  trim_audio.h
code/: labels.npy  test.ipynb  verify.py
model/: model_20230209_0138.h5  model_20230209_0218.h5  model_20230209_1355-32x22-95p.h5  model_20230209_1533.h5  model_test.h5  model_weight_20230209_0119.h5  model_weight_20230209_0121.h5
src/: .gitignore  create_data.py  test.ipynb  train.py  verify.py  voicecnn.py
src/c_code/: CMakeLists.txt  README.md
src/c_code/libs/: trim_audio.h
